<resources>
    <string name="app_name">Daily Expense Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_expense_tracker">Daily Expense Tracker</string>
    <string name="welcome">Welcome!</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="transactions">Transactions</string>
    <string name="view_all">View All</string>
    <string name="save">SAVE</string>
    <string name="add_income">Add Your Income</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="select_tracking">Select Tracking</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="rupee">₹</string>
    <string name="empty">" "</string>

</resources>