<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E3E3"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/inter_light"
            android:text="@string/welcome"
            android:textColor="#4B4B4B"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@+id/profileImg"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="John Doe"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/profileImg"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />


        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="5dp"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_bolt" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/balance_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background">

            <TextView
                android:id="@+id/balance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/total_balance"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_medium"
                android:text="$ 4800.00"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/balance_label" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/arrow_down"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#6FFFFEFE"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="5dp"
                        android:src="@drawable/ic_arrow_down" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/income_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/arrow_down"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:text="2.70000"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/arrow_down"
                    app:layout_constraintTop_toBottomOf="@+id/income_label" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/arrow_up"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:cardBackgroundColor="#6FFFFEFE"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/expense_label"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="5dp"
                        android:src="@drawable/ic_arrow_up" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/expense_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintStart_toStartOf="@+id/expenses"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expense_label"
                    android:text="3.609000"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:id="@+id/expenses"
                    app:layout_constraintStart_toEndOf="@+id/arrow_up"
                    android:layout_marginEnd="20dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/balance_card"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/transactions"
            android:id="@+id/transaction_label"
            android:textColor="#123456"
            android:textSize="20sp"
            android:fontFamily="@font/inter_semibold"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/view_all_button"
            android:textSize="16sp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/view_all"
            android:textColor="#1A528B"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/transaction_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:id="@+id/transaction_recycler_view" />

        
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>